# network

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Makefile  alembic.ini  mypy.ini  pyproject.toml
config/: ephemeral_paths.yaml
config/detections/: T1078_001_priv15_user_added.yaml  T1098_001_user_privilege_escalation.yaml  T1133_001_new_vty_no_acl.yaml  T1542_003_001_rommon_variable.yaml  T1556_001_aaa_server_modification.yaml  T1562_001_001_syslog_tampering.yaml  T1562_001_002_snmp_tampering.yaml  T1562_004_001_acl_permit_any.yaml  T1562_004_002_acl_unbound.yaml  T1601_001_boot_image_modified.yaml
config/inventory/: testbed.yaml
ops/alembic/: env.py
ops/alembic/versions/: 0001_initial.py
src/netauto/: cli.py  settings.py
src/netauto/audit/: __init__.py  chain.py  log.py  verify.py
src/netauto/collector/: __init__.py  runner.py
src/netauto/detection/: __init__.py  attack.py  engine.py  event.py  operators.py  rule.py
src/netauto/inventory/: __init__.py  facts.py  loader.py
src/netauto/secrets/: __init__.py  base.py  env.py  vault.py
tests/: conftest.py
tests/purple/: test_T1562_004_001.py  test_all_scenarios.py
tests/unit/: test_acl_diff_ordering.py  test_attack.py  test_audit_chain.py  test_audit_log.py  test_collector.py  test_detection_engine.py  test_diff.py  test_ephemeral.py  test_facts.py  test_inventory_loader.py  test_normalize_ios_xe.py  test_operators.py  test_rule_dsl.py  test_secrets_env.py  test_secrets_factory.py  test_secrets_vault.py  test_state_models.py  test_state_models_v2_domains.py  test_state_store.py
(+20 files in other folders)
