[project]
name = "netauto"
version = "0.1.0"
description = "Cisco network drift detection — blue-team platform (ATT&CK-mapped)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "jsonpatch>=1.33",
    "jsonpath-ng>=1.6",
]

[project.optional-dependencies]
collector = [
    "pyats>=24.1; platform_system != 'Windows'",
    "genie>=24.1; platform_system != 'Windows'",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml",
    "pre-commit>=3.7",
]

[project.scripts]
netauto = "netauto.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/netauto"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
